--- a/Menu.html
+++ b/Menu.html
@@ -137,7 +137,7 @@
         <table style="width:100%">
             <tr>
                 <td width="40%"> 
-                    <img class="img-responsive" src="./risoles.jpeg" alt="Risoles" title="Risoles">
+                    <img class="img-responsive" src="./Images/risoles.jpeg" alt="Risoles" title="Risoles">
                 </td>
                 <td width="60%">
                     <p style="font-size: 1.1em;">
