--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <div class="fe">
         <h1> Cherry's Cake</h1>
-        <img class="img-responsive center" src="./Cherry's cake.jpg" alt="Cherry Cake">
+        <img class="img-responsive center" src="./Images/Cherry's cake.jpg" alt="Cherry Cake">
     </div>
     <div class=" wd">
 
