--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             </form>
         </div>
 
-        <img class="img-responsive center" src="./Cherry's cake.jpg">
+        <img class="img-responsive center" src="./Images/Cherry's cake.jpg">
 
 
 
