--- a/Test.html
+++ b/Test.html
@@ -14,20 +14,144 @@
 </head>
 
 <body>
-    <h1 class="text-center bg-danger">Hello, world!</h1>
-    <div class="container">
-        <div class="row">
-            <div class="col bg-warning p-3">
-                <div class="card" style="width: 18rem;">
-                    <img src="./Cherry's cake.jpg" class="card-img-top img-responsive p-5" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled">Disabled</a>
+                    </li>
+                </ul>
             </div>
-            <div class="col bg-info p-3"></div>
+        </div>
+    </nav>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-md-3 bg-warning p-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="./Images/Cherry's cake.jpg" class="card-img-top img-responsive p-5" alt="...">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Wellcome</h5>
+                        <p class="card-text">Cherry’s cake was established in approximately 11 years ago, which is in 2011. Since then, Cherry’s cake
+                            has evolved and produce some delicious, unique and various cake, it offer birthday cake, traditional cake
+                            and others.</p>
+                        <a href="#" class="btn btn-primary">Order</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-8 bg-info p-3">
+                <div class="card container p-3 pb-2">
+                    <h4>Menu</h4>
+                </div>
+                <div class="row mt-3 overflow-auto" style="height: 75vh;">
+
+                    <div class="col-12 mb-3">
+                        <div class="card p-0 m-0" style="height: 150px;">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-3 text-center bg-secondary pt-2 pb-2">
+                                        <img src="./Images/risoles.jpeg" class="img-responsive rounded" style="width: 150px; max-height: max-content;" alt="">
+                                    </div>
+                                    <div class="col-9 d-flex align-items-center">
+                                        <div class="col">
+                                            <h6 class="title">Risoles</h6>
+                                            <p>Textnya</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 mb-3">
+                        <div class="card p-0 m-0" style="height: 150px;">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-3 text-center bg-secondary pt-2 pb-2">
+                                        <img src="./Images/risoles.jpeg" class="img-responsive rounded" style="width: 150px; max-height: max-content;" alt="">
+                                    </div>
+                                    <div class="col-9 d-flex align-items-center">
+                                        <div class="col">
+                                            <h6 class="title">Risoles</h6>
+                                            <p>Textnya</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-12 mb-3">
+                        <div class="card p-0 m-0" style="height: 150px;">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-3 text-center bg-secondary pt-2 pb-2">
+                                        <img src="./Images/risoles.jpeg" class="img-responsive rounded" style="width: 150px; max-height: max-content;" alt="">
+                                    </div>
+                                    <div class="col-9 d-flex align-items-center">
+                                        <div class="col">
+                                            <h6 class="title">Risoles</h6>
+                                            <p>Textnya</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 mb-3">
+                        <div class="card p-0 m-0" style="height: 150px;">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-3 text-center bg-secondary pt-2 pb-2">
+                                        <img src="./Images/risoles.jpeg" class="img-responsive rounded" style="width: 150px; max-height: max-content;" alt="">
+                                    </div>
+                                    <div class="col-9 d-flex align-items-center">
+                                        <div class="col">
+                                            <h6 class="title">Risoles</h6>
+                                            <p>Textnya</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 mb-3">
+                        <div class="card p-0 m-0" style="height: 150px;">
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-3 text-center bg-secondary pt-2 pb-2">
+                                        <img src="./Images/risoles.jpeg" class="img-responsive rounded" style="width: 150px; max-height: max-content;" alt="">
+                                    </div>
+                                    <div class="col-9 d-flex align-items-center">
+                                        <div class="col">
+                                            <h6 class="title">Risoles</h6>
+                                            <p>Textnya</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
         </div>
     </div>
     <!-- Optional JavaScript; choose one of the two! -->
