--- a/Menu.html
+++ b/Menu.html
@@ -8,7 +8,7 @@
     <div class="box">
         <ul type="none">
             <li><a href="index.html"> Home</a></li>
-            <li><a href="About.html"> About</a></li>
+            <li><a href="About.html"> About Us</a></li>
             <li><a href="Menu.html"> Menu</a></li>
             <li><a href="Special_offer.html"> Special Offer</a></li>
             <li><a href="Contact_us.html"> Contact Us</a></li>
