--- a/Menu.html
+++ b/Menu.html
@@ -21,7 +21,7 @@
         <table style="width:100%">
             <tr>
                 <td width="40%"> 
-                    <img class="img-responsive" src="./Images/risoles.jpeg" alt="Risoles" title="Risoles">
+                    <img class="img-responsive" src="./Images/Resoles.jpg" alt="Resoles" title="Resoles">
                 </td>
                 <td width="60%">
                     <p style="font-size: 1.1em;">
