--- a/Special_offer.html
+++ b/Special_offer.html
@@ -17,11 +17,11 @@
 
     <div class="fe">
 
-        <h1> Risoles</h1>
+        <h1> Birthday cake</h1>
         <table style="width:100%">
             <tr>
                 <td width="40%">
-                    <img class="img-responsive" src="./Images/Cherry's cake.jpg" alt="Risoles" title="Risoles">
+                    <img class="img-responsive" src="./Images/Birthday Cake.jpg" alt="Risoles" title="Risoles">
                 </td>
                 <td width="60%">
                     <p style="font-size: 1.1em;">
