--- a/About.html
+++ b/About.html
@@ -7,7 +7,7 @@
     <ul type="none">
         <li><a href="index.html"> Home</a></li> 
         <li><a href="About.html"> About Us</a></li>  
-        <li><a href="Menu.html"> Menu</a></li> >
+        <li><a href="Menu.html"> Menu</a></li>
         <li><a href="Special_offer.html"> Special Offer</a></li>
         <li><a href="Contact_us.html"> Contact Us</a></li>      
         </ul>   
@@ -29,7 +29,7 @@
     
         <h2> Order</h2>
         <div class="opt" style="margin-bottom: 3em;">
-            <form action="./Contact_us.html" method="post">
+            <form action="Contact_us.html" method="get">
                 <input type="submit" value="Order Now">
             </form>
         </div>
