--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
         <h2> Order</h2>
         <div class="opt" style="margin-bottom: 3em;">
-            <form action="./Contact_us.html" method="post">
+            <form action="Contact_us.html" method="get">
                 <input type="submit" value="Order Now">
             </form>
         </div>
