--- a/Contact_us.html
+++ b/Contact_us.html
@@ -15,7 +15,7 @@
 
     <div class="fe">
         <h1> Contact Us</h1> 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2444.307654763267!2d106.71273293413714!3d-6.2847340452891345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69fabc9854f31b%3A0x4b5e0afc53e13c0c!2sCherry&#39;s%20Cake!5e0!3m2!1sen!2sid!4v1647246761780!5m2!1sen!2sid" width="600" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2444.307654763267!2d106.71273293413714!3d-6.2847340452891345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69fabc9854f31b%3A0x4b5e0afc53e13c0c!2sCherry&#39;s%20Cake!5e0!3m2!1sen!2sid!4v1647246761780!5m2!1sen!2sid" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <h2> JL Maleo Raya, No. 18, Bintaro Jaya Sektor 9, Pd. Pucung, Tangerang, Kota Tangerang Selatan, Banten 15229</h2>
             
         <h3> (021) 7450824</h3>
